--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.5.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "firebase": "^7.14.4",
-    "node-sass": "^4.14.0",
+    "axios": "^0.24.0",
+    "firebase": "^9.6.1",
+    "node-sass": "^7.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.0",
     "react-slick": "^0.25.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
